# libmultiplier

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddSimpleLibrary.cmake  LibMultiplierConfig.cmake.in
include/: CMakeLists.txt
include/libmultiplier/: CMakeLists.txt  Multiplier.h
lib/: CMakeLists.txt  Multiplier.cpp
test/: CMakeLists.txt  MultiplierTs.cpp
test/googletest/: CMakeLists.txt
